[gd_scene load_steps=6 format=2]

[ext_resource path="res://pixil-frame-0 (14).png" type="Texture" id=1]
[ext_resource path="res://pixil-frame-0 (16).png" type="Texture" id=2]
[ext_resource path="res://pixil-frame-0 (17).png" type="Texture" id=3]
[ext_resource path="res://pixil-frame-0 (15).png" type="Texture" id=4]
[ext_resource path="res://Control.gd" type="Script" id=5]

[node name="game over" type="Node2D"]

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
margin_right = 1020.0
margin_bottom = 594.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Control/VBoxContainer"]
margin_right = 1020.0
margin_bottom = 300.0
texture = ExtResource( 1 )
stretch_mode = 6

[node name="TextureButton" type="TextureButton" parent="Control/VBoxContainer"]
margin_top = 304.0
margin_right = 1020.0
margin_bottom = 604.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )
stretch_mode = 1

[node name="TextureRect2" type="TextureRect" parent="Control/VBoxContainer"]
margin_top = 608.0
margin_right = 1020.0
margin_bottom = 608.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 4
[connection signal="pressed" from="Control/VBoxContainer/TextureButton" to="Control" method="_on_TextureButton_pressed"]
